# tachyon

./: .gitignore  .pre-commit-config.yaml  .stestr.conf  README.md  README.rst  nova-model.md  placement-model.md  pyproject.toml  requirements.txt  scheduling-overview.md  setup.cfg  tachyon-model.md  test-requirements.txt  tox.ini  usecases.md
design/: README.md  _manifest.yaml
design/00-overview/: design-principles.md  glossary.md  introduction.md  technology-stack.md
design/01-schema/: README.md
design/01-schema/nodes/: aggregate.md  consumer.md  infrastructure.md  inventory.md  nova-entities.md  resource-class.md  resource-provider.md  trait.md
design/01-schema/relationships/: consumption.md  hierarchy.md  membership.md  scheduling.md
design/02-patterns/: README.md  numa-topology.md  pci-hierarchy.md  provider-trees.md  sharing-providers.md  soft-constraints.md  vgpu.md
design/03-constraints/: README.md  aggregate-constraints.md  resource-group-constraints.md  server-group-constraints.md  topology-constraints.md  trait-constraints.md
design/04-queries/: README.md  allocation-candidates.md
design/04-queries/filters/: aggregate-filters.md  compute-filters.md  server-group-filters.md  topology-filters.md
design/04-queries/weighers/: group-weighers.md  resource-weighers.md  trait-affinity-weigher.md
design/05-operations/: README.md  indexes-constraints.md  resource-claiming.md  simulation.md  telemetry.md
design/06-migration/: README.md  api-mapping.md  data-migration.md
design/07-watcher-integration/: README.md  simulation-sessions.md  watcher-model-mapping.md
design/08-testing/: README.md  fixtures.md  gabbi-tests.md  neo4j-testing.md  project-structure.md  pti-compliance.md
design/09-development/: README.md  coding-conventions.md
design/appendix/: use-case-matrix.md
design/reference/: nova-model.md  placement-model.md  quick-reference.md  scheduling-overview.md  use-cases.md
devstack/: local.conf.sample  plugin.sh  settings
devstack/files/debs/: tachyon
devstack/files/rpms/: tachyon
devstack/lib/: tachyon
src/tachyon/: __init__.py  auth.py  context.py  policy.py
src/tachyon/api/: __init__.py  app.py  errors.py  microversion.py  middleware.py
src/tachyon/api/blueprints/: __init__.py  aggregates.py  allocation_candidates.py  allocations.py  inventories.py  reshaper.py  resource_classes.py  resource_providers.py  root.py  traits.py  usages.py
src/tachyon/cmd/: __init__.py  api.py  common.py  manage.py
src/tachyon/conf/: __init__.py
src/tachyon/db/: __init__.py  neo4j_api.py  schema.py
src/tachyon/policies/: __init__.py  aggregate.py  allocation.py  allocation_candidate.py  base.py  inventory.py  resource_class.py  resource_provider.py  trait.py  usage.py
src/tachyon/wsgi/: __init__.py  api.py
tests/: __init__.py
tests/tachyon_tests/: __init__.py
tests/tachyon_tests/functional/: __init__.py  test_api.py
tests/tachyon_tests/functional/gabbits/: aggregate.yaml  allocation-candidates.yaml  allocations-1-12.yaml  allocations-1-8.yaml  allocations-1.13.yaml  allocations-1.28.yaml  allocations.yaml  basic-http.yaml  consumer-deletion.yaml  consumer-types-1.38.yaml  granular-multi-provider.yaml  granular.yaml  inventory-constraints.yaml  inventory.yaml  microversion.yaml  reshaper.yaml  resource-classes.yaml  resource-provider-aggregates.yaml  resource-provider.yaml  same-subtree.yaml  sharing-providers.yaml  traits.yaml  usage.yaml
tests/tachyon_tests/functional/local_fixtures/: __init__.py  gabbits.py
tests/tachyon_tests/local_fixtures/: __init__.py  logging.py
tests/tachyon_tests/unit/: __init__.py  test_app.py  test_conf.py  test_errors.py  test_microversion.py  test_middleware.py  test_neo4j_api.py  test_schema.py
tools/: functional-tests.sh  generate_isort_config.py
