[build-system]
requires = ["pbr>=6.0.0", "setuptools>=64.0.0"]
build-backend = "pbr.build"

[project]
name = "tachyon"
description = "Neo4j-backed scheduling and Placement-compatible API (MVP)"
readme = "README.rst"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dynamic = ["version"]
authors = [
  {name = "OpenStack", email = "openstack-discuss@lists.openstack.org"},
]
classifiers = [
    "Environment :: OpenStack",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
]

[project.urls]
Homepage = "https://opendev.org/openstack/tachyon"

[project.scripts]
tachyon-api = "tachyon.cmd.api:main"
tachyon-manage = "tachyon.cmd.manage:main"

[tool.setuptools.packages.find]
where = ["src"]

# stestr configuration
[tool.stestr]
test_path = "./tests/tachyon_tests/unit"
top_dir = "./"
# Group Gabbi tests by YAML file for proper test ordering
group_regex = "tachyon_tests\\.functional\\.test_api(?:\\.|_)([^_]+)"

# Coverage configuration
[tool.coverage.run]
source = ["src/tachyon"]
parallel = true
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
show_missing = true

[tool.coverage.html]
directory = "cover"

[tool.coverage.xml]
output = "cover/coverage.xml"

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "UP031", # percent format - OpenStack style uses % for logging interpolation
    "B904",  # exception chaining - API errors intentionally hide internal details
]

[tool.ruff.lint.isort]
known-first-party = ["tachyon"]

# Mypy configuration (strict mode)
[tool.mypy]
python_version = "3.10"
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
show_error_codes = true
show_column_numbers = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "flask.*",
    "werkzeug.*",
    "neo4j.*",
    "microversion_parse.*",
    "oslo_config.*",
    "oslo_log.*",
    "gabbi.*",
    "oslotest.*",
    "testtools.*",
]
ignore_missing_imports = true
