[metadata]
name = tachyon
summary = Neo4j-backed scheduling and Placement-compatible API (MVP)
description_file = README.rst
license = Apache-2.0
author = OpenStack
author_email = openstack-discuss@lists.openstack.org
home_page = https://opendev.org/openstack/tachyon
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: Apache Software License

[files]
packages = tachyon
package_dir =
    = src

# Entry points are defined in pyproject.toml [project.scripts]
